--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,6 +22,17 @@
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
         <title>Satish Kumar Ganta | Cybersecurity Professional</title>
+        
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-XXXXXXXXXX');
+        </script>
+        <!-- End Google Analytics -->
+        
         <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
         <!--
         These two scripts have been added for the Visual Edits, please do not edit or remove them
