Update Google Analytics with tracking ID

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,12 +24,12 @@
         <title>Satish Kumar Ganta | Cybersecurity Professional</title>
         
         <!-- Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G4A38209911"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'G-XXXXXXXXXX');
+            gtag('config', 'G4A38209911');
         </script>
         <!-- End Google Analytics -->
         
