--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -69,7 +69,7 @@
           "@type": "Person",
           "name": "Satish Kumar Ganta",
           "url": "https://satishganta98.github.io/Satishganta98/",
-          "image": "https://customer-assets.emergentagent.com/job_career-profile-436/artifacts/e3jsphtd_IMG_9529.jpeg",
+          "image": "%PUBLIC_URL%/assets/profile.svg",
           "jobTitle": "Cybersecurity Analyst & SOC Officer",
           "worksFor": {
             "@type": "Organization",
@@ -112,30 +112,7 @@
         }
         </script>
         
-        <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
-        <!--
-        These two scripts have been added for the Visual Edits, please do not edit or remove them
-        -->
-        <script>
-            // Only load visual edit scripts when inside an iframe
-            if (window.self !== window.top) {
-                // Load debug monitor script
-                var debugMonitorScript = document.createElement('script');
-                debugMonitorScript.src = 'https://assets.emergent.sh/scripts/debug-monitor.js';
-                document.head.appendChild(debugMonitorScript);
-
-                // Configure Tailwind
-                window.tailwind = window.tailwind || {};
-                tailwind.config = {
-                    corePlugins: { preflight: false },
-                };
-
-                // Load Tailwind CDN
-                var tailwindScript = document.createElement('script');
-                tailwindScript.src = 'https://cdn.tailwindcss.com';
-                document.head.appendChild(tailwindScript);
-            }
-        </script>
+        
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
