Use profile.jpg for avatar

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -69,7 +69,7 @@
           "@type": "Person",
           "name": "Satish Kumar Ganta",
           "url": "https://satishganta98.github.io/Satishganta98/",
-          "image": "%PUBLIC_URL%/assets/profile.svg",
+          "image": "%PUBLIC_URL%/assets/profile.jpg",
           "jobTitle": "Cybersecurity Analyst & SOC Officer",
           "worksFor": {
             "@type": "Organization",
